# bevault-workers-python

./: .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json.sample  logging_config.json.sample  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml
dev_workers/: __init__.py  filetoken_read_worker.py  postgres_store_worker.py  s3_store_worker.py  snowflake_store_worker.py  sqlserver_store_worker.py
examples/: config.json.sample  logging_config.json.sample  main.py  requirements.txt
examples/stores/: custom_db_store.py  custom_file_store.py
examples/workers/: custom_worker.py
src/bevault_workers/: __init__.py
src/bevault_workers/stores/: __init__.py  base_store.py  gitlab.py  postgresql.py  s3.py  sftp.py  snowflake.py  sqlserver.py  store_registry.py  store_utils.py
src/bevault_workers/stores/aws/: __init__.py  api_client.py  extensions.py  status_tracker.py  sync_service.py
src/bevault_workers/utils/: config_loader.py  logging_config.py
src/bevault_workers/workers/: __init__.py  base_worker.py  worker_manager.py
tests/: conftest.py  test_states_store_sync.py
tests/stores/: test_gitlab.py  test_postgresql.py  test_postgresql_config_compat.py  test_s3.py  test_s3_config_compat.py  test_sftp.py  test_sftp_config_compat.py  test_snowflake.py  test_snowflake_config_compat.py  test_sqlserver.py  test_sqlserver_config_compat.py  test_store_registry.py  test_store_utils.py
tests/workers/: test_worker_manager_helpers.py
